--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
     justify-content: start;
     align-items: center;
     flex-direction: column;
-    gap: 15%;
+    /* gap: 15%; */
 }
 
 header {
@@ -53,29 +53,30 @@ header {
 }
 
 .btn {
+    margin-top: 3vmax;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
     /* padding: 16px 30px; */
     background-color: rgb(218, 50, 50);
-    border-radius: 1.5rem;
+    border-radius: 2rem;
     cursor: pointer;
     /* border: 2px solid black; */
     width: 30rem;
     height: 5rem;
-    font-size: 2rem;
+    font-size: 2.1rem;
 }
 .back-btn {
-    border-radius: 1rem;
+    margin-top: 2vmax;
+    border-radius: 2rem;
     cursor: pointer;
     /* border: 2px solid black; */
-    width: 13rem;
-    height: 3rem;
-    font-size: 1.2rem;
-    position: absolute;
-    left: 3vmax;
-    top: 2vmax;
+    width: 18rem;
+    height: 4rem;
+    font-size: 1.7rem;
+    background-color: rgb(63, 129, 46);
+
 }
 .main__text {
     text-align: center;
@@ -92,15 +93,9 @@ header {
     opacity: 0;
     pointer-events: none;
 }
-.socials {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 20px;
-}
-.social_share {
-    width: 100px;
-    height: 100px;
+
+.share {
+    margin: 3vmax 0;
 }
 @media screen and (max-aspect-ratio: 5/5) {
     body {
@@ -121,7 +116,6 @@ header {
     }
     #main {
         padding-top: 30vmin;
-        gap: 5%;
     }
     .share span {
         width: 25px !important;
