--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ html {
 body {
     color: white;
     height: 100vh;
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Futura New';
     display: flex;
     justify-content: start;
     align-items: center;
